// GRPC definition for the communication between the aggregator and the executors.
// After modifying this file, run
// $ python -m grpc_tools.protoc -I../communication/ --python_out=.. --grpc_python_out=.. job_api.proto
syntax = "proto3";

package fedscale;

service JobService {
    rpc CLIENT_REGISTER (RegisterRequest) returns (ServerResponse) {}
    rpc CLIENT_PING (PingRequest) returns (ServerResponse) {}
    rpc CLIENT_EXECUTE_COMPLETION (CompleteRequest) returns (ServerResponse) {}
    rpc REQUEST_WEIGHTS (WeightRequest) returns (ServerResponse) {}
    rpc UPLOAD_WEIGHTS (UploadWeightRequest) returns (ServerResponse) {}
}

message ServerResponse {
    string event = 1;
    bytes meta = 2;
    bytes data = 3;
}

message RegisterRequest {
    string client_id = 1;
    string executor_id = 2;
    bytes executor_info = 3;
}

message PingRequest {
    string client_id = 1;
    string executor_id = 2;
    string event = 3;
    int num_executors = 4;
}

message CompleteRequest {
    string client_id = 1;
    string executor_id = 2;
    string event = 3;
    bool status = 4;
    string msg = 5;
    string meta_result = 6;
    bytes data_result = 7;
}

message UploadWeightRequest {
    string client_id = 1;
    string executor_id = 2;
    bytes weights = 3;
}

message WeightRequest {
    string client_id = 1;
    string executor_id = 2;
}
